--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "grunt test",
     "postinstall": "bower install --config.interactive=false"
   },
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "acl": "~0.4.9",
     "async": "~1.5.2",
