--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "npm": ">=2.0.0"
   },
   "scripts": {
-    "start": "grunt",
-    "test": "grunt test",
+    "start": "gulp",
+    "test": "gulp test",
     "postinstall": "bower install --config.interactive=false"
   },
   "main": "server.js",
