--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-  "version": "0.5.0-beta",
+  "name": "autoworks",
+  "description": "AutoWorks",
+  "version": "0.1.0-beta",
   "meanjs-version": "0.5.0-beta",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "teno siswono",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/meanjs/mean.git"
+    "url": "https://github.com/tennosys/autoworks.git"
   },
   "engines": {
     "node": ">=0.12.0",
