--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "scripts": {
     "start": "gulp",
     "test": "gulp test",
-    "postinstall": "bower install --config.interactive=false"
+    "postinstall": "bower install && gulp build-libs && gulp build"
   },
+  "main": "server.js",
   "dependencies": {
     "acl": "~0.4.9",
     "async": "~1.5.2",
