--- a/.travis.yml
+++ b/.travis.yml
@@ -46,3 +46,7 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API_KEY
+  app: autoworkshop
