--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ sudo: false
 node_js:
   - 4
   - 5
-  - 6
+#  - 6
 os:
   - linux
-  - centos
-  - macosx
-  - windows
+  # - centos
+  # - macosx
+  # - windows
 # NodeJS v4 requires gcc 4.8
 env:
   - NODE_ENV=travis CXX="g++-4.8" CC="gcc-4.8"
-matrix:
-  allow_failures:
-    - node_js: 6
+# matrix:
+#   allow_failures:
+#     - node_js: 6
 services:
   - mongodb
 # gcc 4.8 requires ubuntu-toolchain-r-test
@@ -46,6 +46,7 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
+before_deploy: "gulp build"
 deploy:
   provider: heroku
   api_key: $HEROKU_API_KEY
