--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-resource": "~1.5.0",
     "angular-ui-router": "~0.2.18",
     "bootstrap": "~3.3.6",
-    "owasp-password-strength-test": "~1.3.0"
+    "owasp-password-strength-test": "~1.3.0",
+    "angular-material": "^1.0.9",
+    "material-design-iconic-font": "^2.2.0"
   },
   "overrides": {
     "bootstrap": {
