--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 sudo: false
 node_js:
   - 4
-#  - 5
+  - 5
 #  - 6
 os:
   - linux
@@ -46,8 +46,9 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
-before_deploy: "gulp build && git add -A && git commit -m '[skip ci]' && git push"
+before_deploy: "gulp build"
 deploy:
   provider: heroku
   api_key: $HEROKU_API_KEY
   app: autoworkshop
+  
