--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,6 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
-before_deploy: "gulp build"
-deploy:
-  provider: heroku
-  api_key: $HEROKU_API_KEY
-  app: autoworkshop
+after_success:
+  - bash ./travis/after_success.sh
   
