--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "coveralls": "~2.11.6",
     "eslint": "~2.2.0",
     "eslint-config-airbnb": "~6.0.2",
+    "grunt-build-control": "^0.7.0",
     "grunt-concurrent": "~2.0.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-csslint": "~0.4.0",
@@ -123,6 +124,7 @@
     "node-inspector": "~0.12.7",
     "run-sequence": "~1.1.5",
     "should": "~8.2.2",
-    "supertest": "~1.2.0"
+    "supertest": "~1.2.0",
+    "grunt-build-control": "DaftMonk/grunt-build-control"
   }
 }
