--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "meanjs",
-  "description": "Fullstack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-  "homepage": "http://meanjs.org/",
+  "name": "autoworks",
+  "description": "Auto Workshop",
+  "homepage": "http://autoworks.herokuapp.com/",
   "license": "MIT",
   "dependencies": {
     "angular": "~1.5.0",
