--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "coveralls": "~2.11.6",
     "eslint": "~2.2.0",
     "eslint-config-airbnb": "~6.0.2",
-    "grunt-build-control": "^0.7.0",
+    "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-concurrent": "~2.0.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-csslint": "~0.4.0",
@@ -125,6 +125,6 @@
     "run-sequence": "~1.1.5",
     "should": "~8.2.2",
     "supertest": "~1.2.0",
-    "grunt-build-control": "DaftMonk/grunt-build-control"
+    "sw-precache": "^3.2.0"
   }
 }
